# pdf-workzeug

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  spec.md  vite.config.ts
src/: App.test.tsx  App.tsx  index.css  main.tsx  state.ts  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/pdfium/: README.md
src-tauri/resources/pdfium/windows-x64/: PDFiumConfig.cmake
src-tauri/src/: lib.rs  main.rs
